--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Boards</h1>
 
-<table>
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Board Name</th>
@@ -11,13 +11,17 @@
     <% @boards.each do |board| %>
       <tr>
         <td><%= board['name'] %></td>
-        <td>
-          <%= link_to 'Rename', rename_board_path(board['id']) %>
-          <%= link_to 'Delete', board_path(board['id']), method: :delete, data: { confirm: 'Are you sure you want to delete this board?' } %>
+        <td class="d-flex gap-2">
+          <%= button_to 'Details', board_path(board['id']), method: :get, class: "btn btn-secondary" %>
 
+
+          <%= button_to 'Delete', board_path(board['id']), method: :delete, data: { confirm: 'Are you sure you want to delete this board?' }, class: "btn btn-danger" %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Create New Board', new_board_path %>
+
+
+<%= link_to 'Create New Board', new_board_path, class: 'btn btn-success' %>
+
