--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,27 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Dashboard</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+  <li class="nav-item">
+    <%= link_to "Home", root_path, class: "nav-link active", "aria-current": "page" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "Boards", boards_path, class: "nav-link" %>
+  </li>
+</ul>
+        </div>
+    </div>
+</nav>
+
+    <div class="container mt-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
