--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
 <div class="container mt-4">
     <h1>Welcome to the Dashboard</h1>
     <p>This is your basic dashboard page. Customize it as needed!</p>
+    <button class="btn btn-primary" data-bs-toggle="tooltip" data-bs-title="Hello">Hover me</button>
+
 </div>
