fix boards service and tests

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Board Details</h1>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-striped">
   <tbody>
     <tr>
       <th>ID</th>
